# Induction-Circuit---Conditional-and-Compositional-Critical-Periods

./: README.md  RUN_ABLATION_SWEEP_V0_10.md  RUN_BEHAVIOURAL_REPLICATION_V0_9.md  RUN_CIRCUIT_CONCENTRATION_AND_PATCHING_V0_12.md  RUN_COMMANDS.md  RUN_DEEPEN_EXPERIMENTS.md  RUN_DESIGN_SWEEPS_V0_19.md  RUN_EXTENDED_FOLLOWUPS.md  RUN_FIRST_BINDING_PATCHING_V0_16.md  RUN_HOP2_ONLY_SCALE_V0_21.md  RUN_INTERMEDIATE_ANSWER_PROBE_V0_14.md  RUN_MATCHED_RANDOM_ABLATION_V0_11.md  RUN_MIXED_FROM_START_SWEEP_V0_20.md  RUN_MODE_SPECIFIC_PROBE_V0_15.md  RUN_NEXT_COMMANDS.md  RUN_REACHABILITY_GEOMETRY.md  RUN_REORGANISATION_ANALYSIS_V0_18.md  RUN_TRANSITION_TRACKING_V0_17.md  RUN_TWOHOP_DECOMPOSITION_V0_13.md  pyproject.toml
cp_toy/: __init__.py  config.py  data.py  metrics.py  model.py  schedules.py  summary.py  train.py
scripts/: aggregate_ablation_results.py  aggregate_activation_patching.py  aggregate_behavioral_results.py  aggregate_design_sweeps_v0_19.py  aggregate_first_binding_patching.py  aggregate_hop2_only_scale_v0_21.py  aggregate_intermediate_answer_probe.py  aggregate_matched_random_ablation.py  aggregate_mixed_from_start_sweep_v0_20.py  aggregate_mode_probe_controls_v0_18.py  aggregate_mode_specific_probe.py  aggregate_reorganisation_candidate_v0_18.py  aggregate_transition_tracking_v0_17.py  aggregate_twohop_score_ablation.py  analyze_head_concentration.py  analyze_reachability_geometry.py  analyze_run.py  analyze_transition_shape.py  compute_late_gate.py  make_safe_geometry_report.py  pack_results.py  plot_design_sweeps_v0_19.py  plot_hop2_only_scale_v0_21.py  (+35 more)
(+112 files in other folders)
